Minor mods to "Poro" theme combobox.
svn changeset:7724 branch:6.0

--- a/WebContent/ITMILL/themes/reindeer/select/select.css
+++ b/WebContent/ITMILL/themes/reindeer/select/select.css
@@ -83,6 +83,9 @@
 .i-filterselect-suggestmenu .gwt-MenuItem {
 	padding: 1px 8px;
 	height: 16px;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
 }
 .i-filterselect-suggestmenu .gwt-MenuItem .i-icon {
 	margin-right: 3px;
@@ -150,7 +153,7 @@
 	background-image: url(img/arrow-up-hover.png); /** sprite-ref: verticals; sprite-margin-top: 3px; sprite-margin-bottom: 3px; sprite-alignment: center */
 }
 .i-filterselect-status {
-	text-shadow: #fff 0 1px 0;
+	text-shadow: #e9eaeb 0 1px 0;
 	font-size: 11px;
 	line-height: normal;
 	width: 100%;
@@ -163,6 +166,9 @@
 	-moz-border-radius-bottomright: 2px;
 	-webkit-border-bottom-left-radius: 2px;
 	-webkit-border-bottom-right-radius: 2px;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
 }
 /* IE fails to position background images properly inside table elements */
 .i-ie .i-filterselect-suggestmenu .gwt-MenuItem-selected {
@@ -189,3 +195,4 @@
 .i-ie .i-filterselect-status {
 	background: transparent url(img/status-bg.png) repeat-x;
 }
+/* Filterselect with icon needs a similar fix than in buttons */
