--- a/WebContent/ITMILL/themes/reindeer/common/common.css
+++ b/WebContent/ITMILL/themes/reindeer/common/common.css
@@ -57,3 +57,31 @@
 .i-ie7 .i-errorindicator {
 	margin-left: -3px;
 }
+.i-tooltip {
+	background-color: #fffcdd;
+	border: 1px solid #b8b295;
+	font-size: 11px;
+	line-height: 13px;
+	color: #222;
+}
+.i-tooltip-text {
+	padding: 2px 4px;
+}
+.i-tooltip .i-errormessage {
+	padding: 3px 4px;
+	background: #ffecc6;
+	color: #b74100;
+	border: none;
+	border-top: 1px solid #fff3dc;
+}
+.i-tooltip .i-errormessage h2 {
+	font-size: 16px;
+	font-weight: normal;
+	color: #ab3101;
+	margin: 2px 0 8px 0;
+}
+.i-tooltip .i-errormessage h3 {
+	font-size: 13px;
+	font-weight: bold;
+	margin: 1px 0 4px 0;
+}
