--- a/WebContent/ITMILL/themes/reindeer/styles.css
+++ b/WebContent/ITMILL/themes/reindeer/styles.css
@@ -1889,6 +1889,34 @@ div > .i-button-small span,
 .i-ie7 .i-errorindicator {
 	margin-left: -3px;
 }
+.i-tooltip {
+	background-color: #fffcdd;
+	border: 1px solid #b8b295;
+	font-size: 11px;
+	line-height: 13px;
+	color: #222;
+}
+.i-tooltip-text {
+	padding: 2px 4px;
+}
+.i-tooltip .i-errormessage {
+	padding: 3px 4px;
+	background: #ffecc6;
+	color: #b74100;
+	border: none;
+	border-top: 1px solid #fff3dc;
+}
+.i-tooltip .i-errormessage h2 {
+	font-size: 16px;
+	font-weight: normal;
+	color: #ab3101;
+	margin: 2px 0 8px 0;
+}
+.i-tooltip .i-errormessage h3 {
+	font-size: 13px;
+	font-weight: bold;
+	margin: 1px 0 4px 0;
+}
 
 /* ./WebContent/ITMILL/themes/reindeer/label/label.css */
 .i-label {
@@ -2071,21 +2099,6 @@ div > .i-button-small span,
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: left -242px;
 }
-/* IE6 needs some manual adjustments */
-.i-ie6 input.i-filterselect-input {
-	border-top: 1px solid #a2a3a4;
-	padding-top: 2px;
-}
-.i-ie6 .i-filterselect-button {
-	border-top: 1px solid #a2a3a4;
-	height: 23px;
-	cursor: pointer;
-}
-.i-ie6 .i-filterselect-focus input.i-filterselect-input,
-.i-ie6 .i-filterselect-focus .i-filterselect-button {
-	border-top-color: #5b97d0;
-}
-
 .i-filterselect-suggestpopup {
 	background: #f8f8f9;
 	border: none;
@@ -2112,10 +2125,6 @@ div > .i-button-small span,
   background-position: left -266px;
 	color: #fff;
 	text-shadow: #3b5a7a 0 1px 0;
-}
-/* IE fails to position background images properly inside table elements */
-.i-ie .i-filterselect-suggestmenu .gwt-MenuItem-selected {
-	background: transparent url(select/img/sel-bg.png) repeat-x;
 }
 .i-filterselect-nextpage,
 .i-filterselect-nextpage-off,
@@ -2352,6 +2361,10 @@ div > .i-button-small span,
 	border-bottom-color: #5ca0df;
 	outline: none;
 }
+input.i-textfield-prompt {
+	font-style: normal;
+	color: #999;
+}
 /* Textfield on blue background */
 .blue .i-textfield {
 	border-color: #92a2aa;
@@ -2379,4 +2392,17 @@ div > .i-button-small span,
 	-webkit-border-image: url(textfield/img/bg-border-image-focus.png) 0 3 0 3 stretch stretch;
 	-moz-border-image: url(textfield/img/bg-border-image-focus.png) 0 3 0 3 stretch stretch;
 	-o-border-image: url(textfield/img/bg-border-image-focus.png) 0 3 0 3 stretch stretch;
+}
+/* Small style textfield */
+.i-app input.i-textfield-small,
+.i-sa input.i-textfield-small,
+.i-ff35 input.i-textfield-small,
+.i-op input.i-textfield-small {
+	font-size: 11px;
+	height: 15px;
+}
+.i-sa input.i-textfield-small,
+.i-ff35 input.i-textfield-small,
+.i-op input.i-textfield-small {
+	height: 16px;
 }
