--- a/WebContent/ITMILL/themes/reindeer/styles.css
+++ b/WebContent/ITMILL/themes/reindeer/styles.css
@@ -1553,8 +1553,11 @@ div.v-window-header {
 /* Automatically compiled css file from subdirectories. */
 
 /* ./WebContent/ITMILL/themes/reindeer/a-sprite-definitions/a-sprite-definitions.css */
+/** sprite: verticals; sprite-image: url(common/img/vertical-sprites.png); sprite-layout: vertical */
 
+/** sprite: horizontals; sprite-image: url(common/img/horizontal-sprites.png); sprite-layout: horizontal */
 
+/** sprite: buttons; sprite-image: url(button/img/button-sprites.png); sprite-layout: vertical */
 
 /* ./WebContent/ITMILL/themes/reindeer/button/button.css */
 /* We serve simpler buttons for IE6, since it doesn't support the adjacent 
@@ -1566,9 +1569,7 @@ div > .v-button,
 	padding: 0 0 0 6px;
 	background-color: transparent;
 	background-repeat: no-repeat;
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -0px;
+	background-image: url(button/img/left.png); /** sprite-ref: buttons */
 	border: none;
 	cursor: default;
 }
@@ -1580,9 +1581,7 @@ div > .v-button span,
 	background-color: transparent;
 	background-repeat: no-repeat;
 	background-position: right top;
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -26px;
+	background-image: url(button/img/right.png);  /** sprite-ref: buttons; sprite-alignment: right */
 	text-shadow: #fff 0 1px 0;
 	font-weight: bold;
 	font-size: 11px;
@@ -1594,29 +1593,21 @@ div > .v-button span,
 	padding-top: 5px;
 }
 .v-button:focus {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -52px;
+	background-image: url(button/img/left-focus.png); /** sprite-ref: buttons */
 	outline: none;
 }
 .v-button:focus span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -78px;
+	background-image: url(button/img/right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
 	outline: none;
 }
 .v-button:active,
 .v-ie7 .v-button.v-pressed {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -104px;
+	background-image: url(button/img/left-pressed.png); /** sprite-ref: buttons */
 	outline: none;
 }
 .v-button:active span,
 .v-ie7 .v-button.v-pressed span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -130px;
+	background-image: url(button/img/right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
 	outline: none;
 }
 .v-ie7 .v-button.v-pressed span {
@@ -1717,53 +1708,37 @@ div > .v-button .v-errorindicator,
  */
 div > .v-button-primary,
 .v-ie7 .v-button-primary {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -156px;
+	background-image: url(button/img/primary-left.png); /** sprite-ref: buttons */
 }
 div > .v-button-primary span,
 .v-ie7 .v-button-primary span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -182px;
+	background-image: url(button/img/primary-right.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 .v-button-primary:focus {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -208px;
+	background-image: url(button/img/primary-left-focus.png); /** sprite-ref: buttons */
 }
 .v-button-primary:focus span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -234px;
+	background-image: url(button/img/primary-right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 .v-button-primary:active,
 .v-ie7 .v-button-primary.v-pressed {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -260px;
+	background-image: url(button/img/primary-left-pressed.png); /** sprite-ref: buttons */
 }
 .v-button-primary:active span,
 .v-ie7 .v-button-primary.v-pressed span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -286px;
+	background-image: url(button/img/primary-right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 /* 
  * Small-style --------------------------
  */
 div > .v-button-small,
 .v-ie7 .v-button-small {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -312px;
+	background-image: url(button/img/small-left.png); /** sprite-ref: buttons */
 	height: 20px;
 }
 div > .v-button-small span,
 .v-ie7 .v-button-small span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -332px;
+	background-image: url(button/img/small-right.png); /** sprite-ref: buttons; sprite-alignment: right */
 	height: 19px;
 	padding: 1px 11px 0 5px;
 	font-weight: normal;
@@ -1777,26 +1752,18 @@ div > .v-button-small span,
 	padding-top: 2px;
 }
 .v-button-small:focus {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -352px;
+	background-image: url(button/img/small-left-focus.png); /** sprite-ref: buttons */
 }
 .v-button-small:focus span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -372px;
+	background-image: url(button/img/small-right-focus.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 .v-button-small:active,
 .v-ie7 .v-button-small.v-pressed {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: left -392px;
+	background-image: url(button/img/small-left-pressed.png); /** sprite-ref: buttons */
 }
 .v-button-small:active span,
 .v-ie7 .v-button-small.v-pressed span {
-  background-image: url(button/img/button-sprites.png);
-  -background-image: url(button/img/button-sprites-ie6.png);
-  background-position: right -412px;
+	background-image: url(button/img/small-right-pressed.png); /** sprite-ref: buttons; sprite-alignment: right */
 }
 
 /**
@@ -2025,9 +1992,7 @@ div > .v-button-small span,
 .v-filterselect {
 	height: 24px;
 	background-repeat: no-repeat;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -0px;
+	background-image: url(select/img/left.png); /** sprite-ref: verticals; sprite-margin-bottom: 1px */
 	padding-left: 2px;
 }
 .v-app .v-filterselect-input,
@@ -2035,9 +2000,7 @@ div > .v-button-small span,
 .v-popupview-popup .v-filterselect-input {
 	background: transparent;
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -25px;
+	background-image: url(select/img/center.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 	border: none;
 	height: 21px;
 }
@@ -2054,54 +2017,36 @@ div > .v-button-small span,
 	outline: none;
 }
 .v-filterselect-focus {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -49px;
+	background-image: url(select/img/left-focus.png); /** sprite-ref: verticals; sprite-margin-bottom: 1px */
 }
 .v-filterselect-focus .v-filterselect-input {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -74px;
+	background-image: url(select/img/center-focus.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 }
 .v-filterselect-button {
 	overflow: hidden;
 	width: 25px;
 	height: 24px;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -98px;
+	background-image: url(select/img/right.png); /** sprite-ref: verticals */
 	cursor: default;
 }
 .v-filterselect-button:hover {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -122px;
+	background-image: url(select/img/right-hover.png); /** sprite-ref: verticals */
 }
 .v-filterselect-button:active {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -146px;
+	background-image: url(select/img/right-pressed.png); /** sprite-ref: verticals */
 }
 .v-filterselect-focus .v-filterselect-button {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -170px;
+	background-image: url(select/img/right-focus.png); /** sprite-ref: verticals */
 }
 .v-filterselect-focus .v-filterselect-button:hover {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -194px;
+	background-image: url(select/img/right-focus-hover.png); /** sprite-ref: verticals */
 }
 .v-filterselect-focus .v-filterselect-button:active {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -218px;
+	background-image: url(select/img/right-focus-pressed.png); /** sprite-ref: verticals */
 }
 .v-disabled .v-filterselect-button:hover,
 .v-readonly .v-filterselect-button:hover {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -242px;
+	background-image: url(select/img/right.png); /** sprite-ref: verticals */
 }
 .v-filterselect-suggestpopup {
 	background: #f8f8f9;
@@ -2125,9 +2070,7 @@ div > .v-button-small span,
 .v-filterselect-suggestmenu .gwt-MenuItem-selected {
 	background: transparent;
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -266px;
+	background-image: url(select/img/sel-bg.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 	color: #fff;
 	text-shadow: #3b5a7a 0 1px 0;
 }
@@ -2141,27 +2084,19 @@ div > .v-button-small span,
 }
 .v-filterselect-nextpage:hover {
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -284px;
+	background-image: url(select/img/page-down-hover.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 }
 .v-filterselect-prevpage:hover {
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -295px;
+	background-image: url(select/img/page-up-hover.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 }
 .v-filterselect-nextpage:active {
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -306px;
+	background-image: url(select/img/page-down-pressed.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 }
 .v-filterselect-prevpage:active {
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -317px;
+	background-image: url(select/img/page-up-pressed.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 }
 .v-filterselect-nextpage-off span,
 .v-filterselect-prevpage-off span {
@@ -2176,27 +2111,19 @@ div > .v-button-small span,
 	text-indent: -99999px;
 	background-position: center 3px;
 	background-repeat: no-repeat;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: center -328px;
+	background-image: url(select/img/arrow-down.png); /** sprite-ref: verticals; sprite-margin-top: 3px; sprite-margin-bottom: 3px; sprite-alignment: center */
 	user-select: none;
 	-moz-user-select: none;
 	-webkit-user-select: none;
 }
 .v-filterselect-prevpage span {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: center -339px;
+	background-image: url(select/img/arrow-up.png); /** sprite-ref: verticals; sprite-margin-top: 3px; sprite-margin-bottom: 3px; sprite-alignment: center */
 }
 .v-filterselect-nextpage:hover span {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: center -350px;
+	background-image: url(select/img/arrow-down-hover.png); /** sprite-ref: verticals; sprite-margin-top: 3px; sprite-margin-bottom: 3px; sprite-alignment: center */
 }
 .v-filterselect-prevpage:hover span {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: center -361px;
+	background-image: url(select/img/arrow-up-hover.png); /** sprite-ref: verticals; sprite-margin-top: 3px; sprite-margin-bottom: 3px; sprite-alignment: center */
 }
 .v-filterselect-status {
 	text-shadow: #e9eaeb 0 1px 0;
@@ -2207,9 +2134,7 @@ div > .v-button-small span,
 	height: 11px;
 	overflow: hidden;
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -372px;
+	background-image: url(select/img/status-bg.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 	-moz-border-radius-bottomleft: 2px;
 	-moz-border-radius-bottomright: 2px;
 	-webkit-border-bottom-left-radius: 2px;
@@ -2249,32 +2174,26 @@ div > .v-button-small span,
 .v-splitpanel-horizontal .v-splitpanel-hsplitter {
 	width: 7px;
 	background-repeat: repeat-y;
-  background-image: url(common/img/horizontal-sprites.png);
-  background-position: -0px top;
+	background-image: url(splitpanel/img/hor-bg.png); /** sprite-ref: horizontals; sprite-alignment: repeat */
 }
 .v-splitpanel-horizontal .v-splitpanel-hsplitter div {
 	width: 7px;
 	background: transparent;
 	background-repeat: no-repeat;
 	background-position: 50%;
-  background-image: url(common/img/horizontal-sprites.png);
-  background-position: -7px middle;
+	background-image: url(splitpanel/img/hor-handle.png); /** sprite-ref: horizontals; sprite-alignment: middle */
 }
 .v-splitpanel-vertical .v-splitpanel-vsplitter {
 	height: 7px;
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -389px;
+	background-image: url(splitpanel/img/ver-bg.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 }
 .v-splitpanel-vertical .v-splitpanel-vsplitter div {
 	height: 7px;
 	background: transparent;
 	background-repeat: no-repeat;
 	background-position: 50%;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: center -396px;
+	background-image: url(splitpanel/img/ver-handle.png); /** sprite-ref: verticals; sprite-alignment: center */
 }
 
 /* ./WebContent/ITMILL/themes/reindeer/tabsheet/tabsheet.css */
@@ -2351,9 +2270,7 @@ div > .v-button-small span,
 	border-bottom-color: #d2d3d4;
 	background: #fff;
 	background-repeat: repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -403px;
+	background-image: url(textfield/img/bg.png); /** sprite-ref: verticals; sprite-alignment: repeat */
 	-moz-border-radius: 3px;
 }
 /* Need more specific selector because of #2384 fixes in base/common/common.css */
